--- a/carD.css
+++ b/carD.css
@@ -5,29 +5,29 @@
 
 
 body{
-	font:15px/1.3 'Open Sans', sans-serif;
-	color: #5e5b64;
+	font:15px 'Open Sans', sans-serif;
+	color: black;
 	text-align:center;
-	    margin-top: 85px;
+	margin-top: 150px;
 }
 
 
 ul{
 	list-style: none;
-	width: 428px;
+	width: 600px;
 	margin: 0 auto;
 	text-align: left;
 }
 
 ul li{
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid blue;
 	padding: 10px;
-	overflow: hidden;
+
 }
 
 ul li img{
-	width:60px;
-	height:60px;
+	width:80x;
+	height:80px;
 	float:left;
 	border:none;
 }
@@ -36,5 +36,5 @@ ul li p{
 	margin-left: 75px;
 	font-weight: bold;
 	padding-top: 12px;
-	color:#6e7a7f;
+	color:grey;
 }
